# feedback

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  homebrew-release.yml
docs/: changelog.md  configuration.md  index.md  installation.md  migration.md  usage.md
docs/development/: api.md  architecture.md  contributing.md
src/feedback/: __init__.py  __main__.py  app.py  config.py  database.py  downloads.py  logging.py  sleep_timer.py
src/feedback/feeds/: __init__.py  discovery.py  fetcher.py  opml.py
src/feedback/models/: __init__.py  feed.py
src/feedback/player/: __init__.py  base.py  mpv.py  vlc.py
src/feedback/screens/: __init__.py  downloads.py  help.py  history.py  primary.py  queue.py  settings.py
src/feedback/styles/: app.tcss
src/feedback/widgets/: __init__.py  confirm_dialog.py  download_list.py  episode_list.py  feed_list.py  loading_overlay.py  player_bar.py  queue_list.py
tests/: conftest.py
tests/fixtures/feeds/: minimal_rss.xml  unknown_format.xml  valid_atom.xml  valid_rss.xml  youtube_atom.xml
tests/integration/: __init__.py  test_database.py
tests/ui/: __init__.py  test_app.py  test_screens.py  test_widgets.py
tests/unit/: __init__.py  test_config.py  test_discovery.py  test_downloads.py  test_fetcher.py  test_logging.py  test_models.py  test_opml.py  test_player.py  test_sleep_timer.py
