[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feedback"
version = "0.2.0"
description = "A modern TUI podcast client for the terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Michelle Pellon" },
]
keywords = ["podcast", "terminal", "tui", "textual", "rss"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Typing :: Typed",
]
dependencies = [
    "textual>=0.50",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "pydantic>=2.5",
    "lxml>=5.0",
    "python-vlc>=3.0",
    "python-mpv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "respx>=0.21",
    "ruff>=0.3",
    "mypy>=1.8",
    "pre-commit>=3.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "pyinstaller>=6.0",
]

[project.scripts]
feedback = "feedback.__main__:main"

[project.urls]
Homepage = "https://github.com/michellepellon/feedback"
Documentation = "https://michellepellon.github.io/feedback"
Repository = "https://github.com/michellepellon/feedback"
Issues = "https://github.com/michellepellon/feedback/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/feedback"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["feedback"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "vlc.*",
    "mpv.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=src/feedback",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=95",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/feedback"]
branch = true
omit = [
    "*/player/vlc.py",
    "*/player/mpv.py",
    "*/__main__.py",
    "*/app.py",
    "*/screens/*.py",
    "*/widgets/*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
